@@ -1,10 +1,17 @@
-DIST gentoo-vdr-scripts-0.5.3.tar.bz2 36820 SHA256 d8cc8f7a42be56cb9a45c269ed0c2042bfe9a68826913893336900d7e0190d0d SHA512 23e1d41f681d363c64402e464c93dd907810a6f7d33e27be12e8d6ddd3d11ad21fa769661a16d4a68defc2c59479435d70fca56eb3f247aaa4bd8312b2ef7522 WHIRLPOOL 9078f39771302e5ecb18d734c612c4b4e62e0a748b39cec107bf1a902fb1ac812a3e8491f3bc189893a8061a1874c6d767cd04d4804a7dece638152f7c8e0d34
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST gentoo-vdr-scripts-2.0.0.tar.bz2 37438 SHA256 6c2025714546a25632c5b8103b3fa4b7ca6adf963189800c91e99cb23f7b2a79 SHA512 0214b390e1e4fe4f65ceb940a1d092f88fe5263eda3c97ebfa7d2925a772165af3a3c62bfc964e577e374ce723aefccb29082f8219fda918ad17f966ad8ad392 WHIRLPOOL a3de83d95a51622de997d8231b973d6899a2fa21324492e11eb4001ad3c15dee5c6e65f20ee44fd43ebe2974b2b1acf623956d2d44b955bfee799d1a696ace65
 DIST gentoo-vdr-scripts-2.5.tar.bz2 39893 SHA256 39a3c5d1cf30f1b07a6218b2154835994bbf9d65358e916260bad970a6ca6432 SHA512 bed3db4e3c4f8195d5715d274a32485d067fa2e539ace417c2d73bac1294d46736754be589d5e18b77e0baa1b4d9cd7df5ff8a13db2850d92d2eb992f9b131a6 WHIRLPOOL 5a7626484784ad49624df92daab0997368f885d4d5f6ad732082c2a77c840f6e23f345cf35816890d43493c57fa70c90eb9a4ab785a8d4ead81f6779714138b9
-DIST gentoo-vdr-scripts-2.5_rc4.tar.bz2 39328 SHA256 e8b3ac27b9bd511f3caaaff089abdf4248bac889e1ca240e2d8e0f74ae84d35c SHA512 c2d743ce7b2c446b3dada0f4e21649f7b9b21447db712cd6f77da0e88a2725563bc08c2a274fb9356f21205df8d2d9db28c3d6b329f4f78a6e979d64b5d2849b WHIRLPOOL 489a913dff361744b1d3e0811eef5566329af231149d4ebf27a0e545f228b68e915ca65ebd04852754afa08ab6071feba79b32697f66dbafb6f9f052059abd9c
-EBUILD gentoo-vdr-scripts-0.5.3.ebuild 3924 SHA256 9c9d727315b8d3a8cd23fe4b7451ea91b1f6620900ddb7555b45933e7047ee10 SHA512 25c58888c1034cfbf2bad7b497ea1fe3a6c668f385ee06a70eaf015eb298fb8940a9461fb6be445fa60e6210e38b82f423970005bf9eaa67db55eb82bd40114a WHIRLPOOL 57258720562cfda8723012c642c1c08789812caeb5a65a13d7ac66f459b17a0b22dc79e102ae1e7f97bf935ef6c3701cc2cc662b7994e056b6d6d32e908f33b8
 EBUILD gentoo-vdr-scripts-2.0.0.ebuild 3652 SHA256 62b52927e9a537b69e7838569c804f312482959014012dddb0f8b30d9da2cd0f SHA512 9dc070c627fc35e285f753521f2928e2c49f6fa5e6afc8381c51abb62382297eba6379b77f0209fbd9b693954f4001089968b90d06b0695a54ba423233097a9c WHIRLPOOL 03fc204c7c5f70dd33ec4d6e0769b9c0cc98e290a2c2ec1146ee93e8bb497cf31a4b3ff8117355df908b89b4ef1478f6614695a6d8d87149a854b6b14d654ffd
 EBUILD gentoo-vdr-scripts-2.5.ebuild 3842 SHA256 ccc9b147dcfc516eb368523e4b551ca8edc172b74698bc417d1c5da2cc820c2d SHA512 38dcba79a132f0757b5a75af50c5460990ad7f4f3e0da5c5c070fe502bc06283e7b05de7e95ead63ec7eb9edcd9f1de35cf933fdec9060f44e43dd8dd7afbf73 WHIRLPOOL 80c23599b4bc9373bb616d7b3f399a9238fab63395b34ef29a9f703218008d755c390847f55ce7223b19550d25e05dc28b4c9382456ad382ea1e40131ab896ac
-EBUILD gentoo-vdr-scripts-2.5_rc4.ebuild 3923 SHA256 997e361b5a8a98c0c42402041debde49320f64bc61f2f5c49cb0dcffb7a2b92e SHA512 0b0441d1f77555e69f7a1ed92357b36304a195335c2e6111d12496b0c12f89f3243b270b9be4513fcfb4eefc380c29af2c1bb7bc45546c51389174d1320621a8 WHIRLPOOL bc2d7fa1d1422a53711eeb33abd0712fb2ea28f552f9bb2b429b7b406eacc27767331a1b2f3db0cf674f279b945dc4f611fcb2ef6b6f6360a3fdf5513507d459
-MISC ChangeLog 26308 SHA256 86aa1409a826ab6c164f92902e877dc73faeaaf805edd4c636e6cfe2c7c6d5db SHA512 13f9e2063af87192abdb5321f5fb12f9703655977d81cafa2f795f54c4783df34e69ef9238e2054f0d5410df4df45b67dbd843d226a882000863a736b915a14d WHIRLPOOL fa561d60e5cb294d15ff494dec767fd932d260399401143d4a3ad61a170d4e5d2467360e5a8ac73765d320654ba315de880341735e73d6f8c19f7b6657f6bd4b
+MISC ChangeLog 26451 SHA256 b535c3992b747a8ee1707b76f4f680c0b6da2e90b437b51e7a7704569715254c SHA512 3041c44e9105d7769eb71378c6aafe99f0af25d5836d8a0fb03c60e61f20739973430a5c7b6b10d8f242e66719340d36eb4ee41aa7bbc3b76a6a8df1d965c699 WHIRLPOOL 93608fa68533f4859538dbddea1b3d18974da8009e27f74034772682014bec60e517932658a8a0aec093f4b3ec14c8a241f2a9db0d794106ce43bc00721a1150
 MISC metadata.xml 366 SHA256 a92d2326d3f734f176d63173dd3a19fa2cd3b9744ee142cd3e4fb0771d08fd29 SHA512 f292ea44800b14564b12cf4f12be80fb822e69586e6ef6e8d4f57aa9bc52c59b57ec85b1bad329b27ac628c186255aa4121250d0026cecaadf7fb2c726951956 WHIRLPOOL 429e33decc3b1c25dae8ba99449f0b40246780649a53038b363505c7db7db25aa0c646a6d5e785556d977d88591488d1a2aca25fb2f26cdb65ea8d8f3a344340
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+Comment: added by hd_brummy@gentoo.org
+
+iD8DBQFUp9YDdn07HTTCgIoRCM2IAJ9ulrXu2oOhx1K0B/B3KLjCjcwIXACgqRjo
+3hCBxVae2BS8OXIJSyLMJtQ=
+=frCX
+-----END PGP SIGNATURE-----
