@@ -1,6 +1,10 @@
 # ChangeLog for media-tv/gentoo-vdr-scripts
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.131 2015/01/01 21:55:01 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.132 2015/01/03 11:43:58 hd_brummy Exp $
+
+  03 Jan 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
+  -gentoo-vdr-scripts-0.5.3.ebuild, -gentoo-vdr-scripts-2.5_rc4.ebuild:
+  clean up old
 
   01 Jan 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
   gentoo-vdr-scripts-2.5.ebuild:
